package ru.dt1520.security.authenticator.feature.totpcodes

object TotpCodesTestTags {
    const val EmptyStateMessage = "totp-codes:empty-state"
    const val RemoveButton = "totp-codes:remove-button"
    const val ConfirmRemoveButton = "totp-codes:confirm-remove-button"
    const val CancelRemoveButton = "totp-codes:cancel-remove-button"
}
